all related stuff fixed

--- a/index.html
+++ b/index.html
@@ -2,50 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>standard CSS-grid set as a template</title>
     <link rel="stylesheet" href="style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative&display=swap" rel="stylesheet"/>
-
+    <link href="https://fonts.googleapis.com/css?family=Cinzel&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed|Cinzel&display=swap" rel="stylesheet"/>
 </head>
 <body>
+<section class="page">
 
-<header>
-    <h1>Playing around with CSS-Grid</h1>
-</header>
+    <header class="page-title">
+        <h1>Playing around with CSS-Grid</h1>
+    </header>
+    <nav>
+        Next<br>Other<br>Further<br>Contact<br>Links
+    </nav>
 
-<section>
     <article>
         <h3>first clever words</h3>
         <p>If you disturb or do with a unbiased extend, stigma desires you.</p>
     </article>
     <article>
         <h3>second clever words</h3>
-        <p>spiritual arts shapes most freedoms. Paradise of core will sincerely develop a magical sun. As i have knowed you, so you must acquire one another.
-            Going to the realm of extend doesn’t witness advice anymore than grasping creates united bliss</p>
+        <p>spiritual arts shapes most freedoms. Paradise of core will sincerely develop a magical sun. As i have knowed
+            you, so you must acquire one another.</p>
+        <p>Going to the realm of extend doesn’t witness advice anymore than grasping creates united bliss</p>
     </article>
     <article>
         <h3>third clever words</h3>
-        <p>All separate individuals acquire each other, only unprepared karmas have a justice. Vision doesn’t essentially yearn any doer — but the body is what fails.</p>
+        <p>All separate individuals acquire each other, only unprepared karmas have a justice. Vision doesn’t
+            essentially yearn any doer — but the body is what fails.</p>
     </article>
 
-    <header><h2>more content</h2></header>
+    <header class="chapter-title">
+        <h2>more content</h2>
+    </header>
 
     <article>
         <h3>fourth clever words</h3>
         <p>Extend shapes when you believe with tantra. </p>
     </article>
+    <article>
+        <h3>fifth clever words</h3>
+        <p>One must trap the follower in order to forget the cow of unbiased career.
+            One must know the self in order to praise the body of serious paradox.
+            One must remember the lama in order to praise the moon of separate fear.</p>
+    </article>
+
+    <footer>
+        <h3>Footer</h3>
+        <p>Nocere interdum ducunt ad fidelis calceus. Pol, a bene rector, velox extum! Cum poeta accelerare, omnes
+            habenaes consumere grandis, superbus xiphiases. Ubi est teres abactor?</p>
+    </footer>
 </section>
-
-<footer>
-    <h3>special content</h3>
-    <p>
-        Nocere interdum ducunt ad fidelis calceus. Pol, a bene rector, velox extum! Cum poeta accelerare, omnes habenaes consumere grandis, superbus xiphiases. Ubi est teres abactor?
-        Gratis abactor inciviliter captiss bursa est. Varius, brevis diatrias absolute anhelare de placidus, gratis torquis. Nocere interdum ducunt ad fidelis calceus. Pol, a bene rector, velox extum! Cum poeta accelerare, omnes habenaes consumere grandis, superbus xiphiases. Ubi est teres abactor?
-        Gratis abactor inciviliter captiss bursa est. Varius, brevis diatrias absolute anhelare de placidus, gratis torquis. Nocere interdum ducunt ad fidelis calceus. Pol, a bene rector, velox extum! Cum poeta accelerare, omnes habenaes consumere grandis, superbus xiphiases. Ubi est teres abactor?
-        Gratis abactor inciviliter captiss bursa est. Varius, brevis diatrias absolute anhelare de placidus, gratis torquis.
-    </p>
-</footer>
-
-
 </body>
 </html>
