--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
     <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed|Cinzel&display=swap" rel="stylesheet"/>
 </head>
 <body>
+<!-- the section .page contains the grid -->
 <section class="page">
 
     <header class="page-title">
         <h1>Playing around with CSS-Grid</h1>
     </header>
+    <!-- the Nav-bar -->
     <nav>
         Next<br>Other<br>Further<br>Contact<br>Links
     </nav>
-
+    <!-- all text is organized in articles and displayed in boxes -->
     <article>
         <h3>first clever words</h3>
         <p>If you disturb or do with a unbiased extend, stigma desires you.</p>
@@ -38,7 +40,6 @@
     <header class="chapter-title">
         <h2>more content</h2>
     </header>
-
     <article>
         <h3>fourth clever words</h3>
         <p>Extend shapes when you believe with tantra. </p>
